--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,1 +1,45 @@
-body{padding:0;margin:0;background-color:#c61f00}header{position:fixed;top:30px}#screen1{background:url(../images/screen1.png) no-repeat right bottom;position:absolute;background-size:100%}#screen2{background:url(../images/screen2.png) no-repeat left bottom;position:absolute;background-size:100%}#screen3{background:url(../images/screen3.png) no-repeat left top;position:absolute;background-size:100%}#screen4{background:url(../images/screen4.png) no-repeat right top;position:absolute;background-size:100%}#arrow1,#arrow2,#arrow3,#arrow4{position:absolute}
+/*
+	Stylesheet for Coming Soon
+
+	Media: mobile
+	Author: William Yap
+*/
+
+body {
+	padding: 0;
+	margin: 0;
+	background-color: #c61f00;
+}
+
+header {
+	position: fixed;
+	top: 30px;
+}
+
+#screen1 {
+	background: url(../images/screen1.png) no-repeat right bottom;
+	position: absolute;
+	background-size: 100%;
+}
+
+#screen2 {
+	background: url(../images/screen2.png) no-repeat left bottom;
+	position: absolute;
+	background-size: 100%;
+}
+
+#screen3 {
+	background: url(../images/screen3.png) no-repeat left top;
+	position: absolute;
+	background-size: 100%;
+}
+
+#screen4 {
+	background: url(../images/screen4.png) no-repeat right top;
+	position: absolute;
+	background-size: 100%;
+}
+
+#arrow1, #arrow2, #arrow3, #arrow4 {
+	position: absolute;
+}
